# python-template-based-on-docker

./: .coveragerc  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: py-ci.yml
src/: main.py
src/common/: __init__.py  config.py
src/common/logger/: __init__.py  logger.py  logging_config.yaml
src/common/yaml_configs/: local.yaml  test.yaml
src/module/: temp_class.py
tests/module/: test_temp_class.py
